# NotRoboContests

./: CMakeLists.txt  README.md
contest1/: README.md  contest1_DK_Feb6.cpp  mie443_contest1.kdev4
contest1/src/: .contest1.cpp.kate-swp  contest1.cpp  contest1_time_based.cpp
contest1/worlds/Contest1/: model.sdf
contest1/worlds/Wall/: model.sdf
contest1/worlds/object_2/: model.config  model.sdf
contest1/worlds/test_world_v4/: model.config
contest2/boxes_database/: coords.xml
contest2/maps/: contest2_env.pgm  contest2_env.yaml
contest2/src/: boxes.cpp  contest2.cpp  contest2_V2.cpp  contest2_old.cpp  imagePipeline-March12.cpp  imagePipeline.cpp  imagePipeline_V2.cpp  imagePipeline_old.cpp  navigation.cpp
contest3/: CMakeLists.txt  package.xml
contest3/include/: imagePipeline.h
contest3/src/: Image.cpp  contest3.cpp  contest3_V2.cpp  contest3_b.cpp  contest3_inf_test.cpp
src/: Contest1TurningPattern.cpp  Contest1WallDetector.cpp  contest1.cpp  contest10129.cpp
turtlebot_follower/src/: follower.cpp
worlds/Contest1/: model.config
worlds/object_1/: model.config  model.sdf
worlds/test_world_v4/: model.sdf
